<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary"
    tools:context=".FragmentAdministration">

    <LinearLayout
        android:background="@drawable/bg_for_dashboard"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="250dp">

        <TextView
            android:text="@string/bdg"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/up_administration"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="180dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/dash_row_layout">
            <androidx.cardview.widget.CardView
                style="@style/dash_card">
                <LinearLayout
                    style="@style/dash_card_layout">
                    <ImageView
                        android:contentDescription="@string/place"
                        style="@style/dash_icon_size"
                        android:src="@drawable/icon_travel"/>
                    <TextView
                        android:textAlignment="center"
                        android:text="@string/bdg_chairman"
                        style="@style/dash_title"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                style="@style/dash_card">
                <LinearLayout
                    style="@style/dash_card_layout">
                    <ImageView
                        android:contentDescription="@string/place"
                        style="@style/dash_icon_size"
                        android:src="@drawable/icon_travel"/>
                    <TextView
                        android:textAlignment="center"
                        android:text="@string/uno"
                        style="@style/dash_title"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            style="@style/dash_row_layout">
            <androidx.cardview.widget.CardView
                style="@style/dash_card">
                <LinearLayout
                    style="@style/dash_card_layout">
                    <ImageView
                        android:contentDescription="@string/place"
                        style="@style/dash_icon_size"
                        android:src="@drawable/icon_travel"/>
                    <TextView
                        android:textAlignment="center"
                        android:text="@string/ac_land"
                        style="@style/dash_title"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                style="@style/dash_card">
                <LinearLayout
                    style="@style/dash_card_layout">
                    <ImageView
                        android:contentDescription="@string/place"
                        style="@style/dash_icon_size"
                        android:src="@drawable/icon_travel"/>
                    <TextView
                        android:textAlignment="center"
                        android:text="@string/oc"
                        style="@style/dash_title"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>



    </LinearLayout>

</RelativeLayout>